--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -11,7 +11,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
 	"appid": "wx4ff803a9d7c7f8ff",
-	"projectname": "%E6%B5%8B%E8%AF%95",
+	"projectname": "123",
 	"condition": {
 		"search": {
 			"current": -1,
