--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/order/order",
     "pages/my/my",
     "pages/help/help",
-    "pages/wholesale/wholesale"
+    "pages/wholesale/wholesale",
+    "pages/recommend/recommend"
   ],
   "window": {
     "backgroundTextStyle": "light",
